--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Amiri';
+  src: url('/fonts/Amiri-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* You can add Amiri-Bold if you have the .ttf file and need it */
+/*
+@font-face {
+  font-family: 'Amiri';
+  src: url('/fonts/Amiri-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+*/
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Amiri', Arial, Helvetica, sans-serif; /* Set Amiri as a primary font */
 }
 
 @layer base {
